--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <label for="body">Body</label>
         <input type="text" name="body" id="body"></input>
 
-        <button type="submit" class="upload-image-btn d-block mx-auto mt-3">Sumbit Post</button>
+        <button type="submit" >Sumbit Post</button>
     </form>
     <script src="/assets/script.js"></script>
 </body>
