--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 
         <label for="image">Image</label>
         <input class='' type='file' name='image' id="image">
+        <img id="show-image" />
 
         <label for="title">Title</label>
         <input type="text" name="title" id="title"></input>
